--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 locale: "en-US"
 title: "Your Name / Site Title"
 title_separator: "-"
-name: &name "Your Name"
+name: &name "Pol Fuentes"
 description: &description "personal description"
 url: https://spacemercury.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl: "" # the subpath of your site, e.g. "/blog"
@@ -25,10 +25,10 @@ author:
   name: "Your Sidebar Name"
   pronouns: # example: "she/her"
   bio: "Short biography for the left-hand sidebar"
-  location: "Earth"
-  employer: "Red Brick University"
+  location: "Switzerland"
+  employer: "EPFL"
   uri: # URL
-  email: "none@example.org"
+  email: "polfuentescam@gmail.com"
 
   # Academic websites
   arxiv: # URL - Update with the correct link to your profile
